tests/lifetime_inference/alias_inference_error.june
// error: compatible lifetime

struct Foo {
    x: i64
}

struct Bar {
    foo: Foo
}

fun qux(mut bar: Bar) -> Foo {
    let foo = new Foo(x: 100)

    bar.foo = foo

    return foo
}

fun main() {
    mut bar = new Bar(foo: new Foo(x: 88))

    let foo = qux(bar)

    println(foo.x)
}